--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {margin: 0;
-background-color: lightblue}
+    background-color: lightblue;
+}
 
 ul.topnav {
     list-style-type: none;
@@ -38,30 +39,30 @@ ul.topnav li.right {float: right;}
     opacity: 0.7;
     font-size: 10px;
 }
-.monthPre{
-    color: gray;
-    text-align: center;
+.container {
+    font-family: 'Noto Sans', sans-serif;
+    margin-top: 80px;
+
 }
-.monthNow{
+h3 {
+    margin-bottom: 30px;
+
+}
+th {
+    height: 20px;
+    text-align: center;
+
+}
+td {
+    height: 20px;
+    border: 1px solid black;
+}
+.today {
+    background: orange;
+}
+th:nth-of-type(1), td:nth-of-type(1) {
+    color: red;
+}
+th:nth-of-type(7), td:nth-of-type(7) {
     color: blue;
-    text-align: center;
-}
-.dayNow{
-    border: 2px solid black;
-    color: blue;
-    text-align: center;
-}
-.calendar td{
-    htmlContent: 2px;
-    width: 40px;
-}
-.monthNow th{
-    background-color: #8CA6DB;
-    color: #FFFFFF;
-    text-align: center;
-}
-.dayNames{
-    background: blue;
-    color: #FFFFFF;
-    text-align: center;
 }
