--- a/styles/style home.css
+++ b/styles/style home.css
@@ -1,27 +1,25 @@
 .banner{
     margin: auto;
     text-align: center;
-    border: solid black 1px;
-    width: 80%;
+    width: 20%;
 }
 html{
     background-color: lightblue;
 }
 
 .homneweetje{
-    background-color: lightgrey;
+    background-color: lightcyan;
     position: absolute;
     top: 20%;
     left: 35%;
     height: 100px;
     border-radius: 20%;
-    border: solid black 1px;
     width: 30%;
     text-align: center;
     font-size: 15px;
 }
 .weetjetext{
-    margin-top: 9%;
+    margin-top: 2%;
 }
 .nav{
     text-decoration: none;
