admin controle en admin pagina en alle weetjes pagina gemaakt

--- a/styles/style.css
+++ b/styles/style.css
@@ -66,3 +66,9 @@ th:nth-of-type(1), td:nth-of-type(1) {
 th:nth-of-type(7), td:nth-of-type(7) {
     color: blue;
 }
+
+.weetjestabel{
+    position: absolute;
+    left: 42%;
+    top: 10%;
+}
